[package]
name = "tokio-anyfd"
version = "0.1.1"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
license = "BSD-3-Clause"
keywords = ["tokio", "fd", "unix"]
description = "Use any suitable file descriptor with tokio"
documentation = "https://docs.rs/tokio-anyfd"
homepage = "https://github.com/lilydjwg/rust-tokio-anyfd"
repository = "https://github.com/lilydjwg/rust-tokio-anyfd"
edition = "2018"

[dependencies]
libc = "0.2.66"
mio = "0.6.21"

[dependencies.tokio]
version = "0.2.9"
features = ["io-driver"]
