[package]
name = "tokio-anyfd"
version = "0.2.0"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
license = "BSD-3-Clause"
keywords = ["tokio", "fd", "unix"]
description = "Use any suitable file descriptor with tokio"
documentation = "https://docs.rs/tokio-anyfd"
homepage = "https://github.com/lilydjwg/rust-tokio-anyfd"
repository = "https://github.com/lilydjwg/rust-tokio-anyfd"
edition = "2018"

[dependencies]
libc = "0.2"
futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["net"]
